--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,1 +1,347 @@
-html{font-size:62.5%;overflow-x:hidden}body{font-family:Lato,sans-serif;margin:0;box-sizing:border-box;font-size:1.8rem;color:#3a3f45}*,:after,:before{box-sizing:inherit}a{color:inherit;text-decoration:none}h1,h2{margin:0}img{display:block;max-width:100%;height:auto}:root{--scroll-width:0.4444444444em;--scroll-thumb-width:0.3333333333em;--scroll-track--bg-color:#ccc;--shadow-color:rgba(#212121,0.8);--scroll-thumb--bg-color:#aaa;--scroll-thumb-hover--bg-color:#ed6696}::-webkit-scrollbar{width:var(--scroll-width);border-radius:calc(var(--scroll-width)*0.6);height:var(--scroll-width)}::-webkit-scrollbar-track{background:var(--scroll-track--bg-color)}::-webkit-scrollbar-thumb,::-webkit-scrollbar-track{border-radius:calc(var(--scroll-width)*0.6);-webkit-box-shadow:inset 0 0 10px var(--shadow-color)}::-webkit-scrollbar-thumb{width:var(--scroll-thumb-width);height:var(--scroll-thumb-width);background:var(--scroll-thumb--bg-color)}::-webkit-scrollbar-thumb:hover{--scroll-thumb--bg-color:var(--scroll-thumb-hover--bg-color)}.ee-logo__elem{font-weight:900;font-size:1.3888888889em;color:#db3157;text-transform:uppercase;line-height:2.5rem}.ee-logo__exam{font-weight:400;font-size:1.1111111111em;line-height:2.5rem}.ee-logo__by{letter-spacing:4px;text-transform:uppercase;font-weight:300;font-size:.4444444444em;display:block;line-height:1rem}.ee-button{font-size:.8333333333em;font-weight:700;border-radius:6.6666666667em;padding:.8em 1.6666666667em;transition:color .3s}.ee-button--outline{color:#434363;border:2px solid}.ee-button--outline:hover{color:#23d378}.ee-popup{position:fixed;top:0;left:0;width:100vw;height:100vh;overflow:hidden;background-color:rgba(0,0,0,.8);justify-content:center;align-items:center;display:none;transform:translateY(-100%);opacity:0;transition-property:transform,opacity;transition:.3s ease-in-out}.ee-popup__container{transform:translateY(-300%);transition-duration:.5s;width:50vw;min-width:16em;min-height:50vh;max-height:80vh;background-color:#fff;border-radius:1em;position:relative;transition:inherit;display:flex;flex-direction:column;overflow:hidden}.ee-popup__header{padding:1.6rem;display:flex;justify-content:space-between}.ee-popup__title{font-size:1.6666666667em;font-weight:300}.ee-popup__body{overflow-y:auto;padding:.8rem 1.6rem 1.6rem}.ee-popup__content{font-size:calc(13.62733px + .12422vw);font-weight:400;line-height:1.35}@media (min-width:em(1170,16)){.ee-popup__content{font-size:1.6rem}}.ee-popup__close-btn{height:2.6rem;width:2.6rem;border-radius:2em;color:#434363;display:block;text-indent:-9999em;border:1px solid;background-color:transparent;cursor:pointer;position:relative;transition:transform .25s;transform:rotate(0deg)}.ee-popup__close-btn:after,.ee-popup__close-btn:before{content:"";width:60%;height:1px;position:absolute;top:50%;left:50%;background-color:currentColor}.ee-popup__close-btn:before{transform:translate(-50%,-50%) rotate(135deg)}.ee-popup__close-btn:after{transform:translate(-50%,-50%) rotate(-135deg)}.ee-popup__close-btn:hover{color:#ed6696;transform:rotate(180deg)}.ee-popup--active{display:flex;opacity:1;transform:translateY(0)}.ee-popup--active .ee-popup__container{transform:translateY(0);transition-delay:.15s}.ee-popup--closing{transition-delay:.15s;opacity:0;transform:translateY(100%)}.ee-popup--closing .ee-popup__container{transform:translateY(300%);transition-delay:0ms}.ee-hero{background-image:linear-gradient(270deg,#ed6696,#3123ae)}.ee-hero__container{font-size:calc(25.90062px + 1.36646vw);text-align:center;color:#fff;line-height:1;padding-top:1.3461538462em;padding-bottom:1.0576923077em}@media (min-width:em(1170,16)){.ee-hero__container{font-size:5.2rem}}.ee-hero__title{font-size:1em;font-weight:900;display:flex;align-items:center;justify-content:center;margin-bottom:.3846153846em}.ee-hero__subtitle{font-size:2.1rem;font-weight:300;margin:0;line-height:1.3}.ee-products{position:relative}.ee-products:before{position:absolute;top:-1px;left:0;content:"";height:8em;width:100%;background-image:linear-gradient(270deg,#ed6696,#3123ae)}.ee-products__container{position:relative;margin:0 -1%;display:flex;flex-wrap:wrap;align-items:center;justify-content:space-between}.ee-products__item{background-color:#fff;border-radius:1em;flex-basis:30%;flex-grow:1;min-width:16em;overflow:hidden;cursor:pointer;box-shadow:0 5px 25px 0 rgba(0,0,0,.15);margin:0 1% 1em}.ee-products__title{text-align:center;padding-top:.5em;padding-bottom:.5em;font-size:1.6666666667em;font-weight:300}.ee-products__footer{display:flex;flex-direction:column;align-items:center;justify-content:center;padding:1.1111111111em 0}.ee-container{max-width:140rem;padding-right:1.6rem;padding-left:1.6rem;margin:0 auto}.ee-header{padding-top:1.1111111111em;padding-bottom:1.1111111111em;background-color:#fff}.ee-main{min-height:calc(100vh - 7.88889em)}.ee-footer{text-align:center;background-color:#2a323d;padding-top:1.25em;padding-bottom:1.25em;color:hsla(0,0%,100%,.52);font-weight:300;font-size:.8888888889em}.ee-footer a{color:#fff}.ee-footer a:hover{text-decoration:underline}.error404 .ee-main{background-image:linear-gradient(270deg,#ed6696,#3123ae);color:#fff;display:flex;justify-content:center;align-items:center}.error404 .page-header{font-size:calc(24.40994px + 1.86335vw);font-weight:700}@media (min-width:em(1170,16)){.error404 .page-header{font-size:6rem}}
+/* Config */
+/* Common */
+/* Base */
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: "Lato", sans-serif;
+  margin: 0;
+  box-sizing: border-box;
+  font-size: 1.8rem;
+  color: #3a3f45;
+}
+
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+h1,
+h2 {
+  margin: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+:root {
+  --scroll-width: 0.4444444444em;
+  --scroll-thumb-width: 0.3333333333em;
+  --scroll-track--bg-color: #ccc;
+  --shadow-color: rgba(#212121, 0.8);
+  --scroll-thumb--bg-color: #aaa;
+  --scroll-thumb-hover--bg-color: #ed6696;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: var(--scroll-width);
+  border-radius: calc(0.6 * var(--scroll-width));
+  height: var(--scroll-width);
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: var(--scroll-track--bg-color);
+  border-radius: calc(0.6 * var(--scroll-width));
+  -webkit-box-shadow: inset 0 0 10px var(--shadow-color);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  width: var(--scroll-thumb-width);
+  height: var(--scroll-thumb-width);
+  background: var(--scroll-thumb--bg-color);
+  border-radius: calc(0.6 * var(--scroll-width));
+  -webkit-box-shadow: inset 0 0 10px var(--shadow-color);
+}
+
+/* Handle on Hover */
+::-webkit-scrollbar-thumb:hover {
+  --scroll-thumb--bg-color: var(--scroll-thumb-hover--bg-color);
+}
+
+/* UI Elements (atoms and molecules) */
+.ee-logo__elem {
+  font-weight: 900;
+  font-size: 1.3888888889em;
+  color: #db3157;
+  text-transform: uppercase;
+  line-height: 2.5rem;
+}
+.ee-logo__exam {
+  font-weight: 400;
+  font-size: 1.1111111111em;
+  line-height: 2.5rem;
+}
+.ee-logo__by {
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  font-weight: 300;
+  font-size: 0.4444444444em;
+  display: block;
+  line-height: 1rem;
+}
+
+.ee-button {
+  font-size: 0.8333333333em;
+  font-weight: 700;
+  border-radius: 6.6666666667em;
+  padding: 0.8em 1.6666666667em;
+  transition: color 300ms;
+}
+.ee-button--outline {
+  color: #434363;
+  border: 2px solid currentColor;
+}
+.ee-button--outline:hover {
+  color: #23d378;
+}
+
+.ee-popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  display: none;
+  transform: translateY(-100%);
+  opacity: 0;
+  transition-property: transform, opacity;
+  transition: 300ms ease-in-out;
+}
+.ee-popup__container {
+  transform: translateY(-300%);
+  transition-duration: 500ms;
+  width: 50vw;
+  min-width: 16em;
+  min-height: 50vh;
+  max-height: 80vh;
+  background-color: #fff;
+  border-radius: 1em;
+  position: relative;
+  transition: inherit;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+.ee-popup__header {
+  padding: 1.6rem;
+  display: flex;
+  justify-content: space-between;
+}
+.ee-popup__title {
+  font-size: 1.6666666667em;
+  font-weight: 300;
+}
+.ee-popup__body {
+  overflow-y: auto;
+  padding: 0.8rem 1.6rem 1.6rem;
+}
+.ee-popup__content {
+  font-size: calc(14px + (16 - 14) * ((100vw - 300px) / (1910 - 300)));
+  font-weight: 400;
+  line-height: 1.35;
+}
+@media (min-width: em(1170, 16)) {
+  .ee-popup__content {
+    font-size: 1.6rem;
+  }
+}
+.ee-popup__close-btn {
+  height: 2.6rem;
+  width: 2.6rem;
+  border-radius: 2em;
+  color: #434363;
+  display: block;
+  text-indent: -9999em;
+  border: 1px solid currentColor;
+  background-color: transparent;
+  cursor: pointer;
+  position: relative;
+  transition: transform 250ms;
+  transform: rotate(0deg);
+}
+.ee-popup__close-btn::before, .ee-popup__close-btn::after {
+  content: "";
+  width: 60%;
+  height: 1px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  background-color: currentColor;
+}
+.ee-popup__close-btn::before {
+  transform: translate(-50%, -50%) rotate(135deg);
+}
+.ee-popup__close-btn::after {
+  transform: translate(-50%, -50%) rotate(-135deg);
+}
+.ee-popup__close-btn:hover {
+  color: #ed6696;
+  transform: rotate(180deg);
+}
+.ee-popup--active {
+  display: flex;
+  opacity: 1;
+  transform: translateY(0);
+}
+.ee-popup--active .ee-popup__container {
+  transform: translateY(0);
+  transition-delay: 150ms;
+}
+.ee-popup--closing {
+  transition-delay: 150ms;
+  opacity: 0;
+  transform: translateY(100%);
+}
+.ee-popup--closing .ee-popup__container {
+  transform: translateY(300%);
+  transition-delay: 0ms;
+}
+
+/* Components (ACF Layouts) */
+.ee-hero {
+  background-image: linear-gradient(270deg, #ed6696 0%, #3123ae 100%);
+}
+.ee-hero__container {
+  font-size: calc(30px + (52 - 30) * ((100vw - 300px) / (1910 - 300)));
+  text-align: center;
+  color: #fff;
+  line-height: 1;
+  padding-top: 1.3461538462em;
+  padding-bottom: 1.0576923077em;
+}
+@media (min-width: em(1170, 16)) {
+  .ee-hero__container {
+    font-size: 5.2rem;
+  }
+}
+.ee-hero__title {
+  font-size: 1em;
+  font-weight: 900;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0.3846153846em;
+}
+.ee-hero__subtitle {
+  font-size: 2.1rem;
+  font-weight: 300;
+  margin: 0;
+  line-height: 1.3;
+}
+
+.ee-products {
+  position: relative;
+}
+.ee-products::before {
+  position: absolute;
+  top: -1px;
+  left: 0;
+  content: "";
+  height: 8em;
+  width: 100%;
+  background-image: linear-gradient(270deg, #ed6696 0%, #3123ae 100%);
+}
+.ee-products__container {
+  position: relative;
+  margin: 0 -1%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+.ee-products__item {
+  background-color: #fff;
+  border-radius: 1em;
+  flex-basis: 30%;
+  flex-grow: 1;
+  min-width: 16em;
+  overflow: hidden;
+  cursor: pointer;
+  box-shadow: 0 5px 25px 0 rgba(0, 0, 0, 0.15);
+  margin: 0 1% 1em;
+}
+.ee-products__title {
+  text-align: center;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  font-size: 1.6666666667em;
+  font-weight: 300;
+}
+.ee-products__footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 1.1111111111em 0;
+}
+
+/* Main Layouts (Page Sections) */
+.ee-container {
+  max-width: 140rem;
+  padding-right: 1.6rem;
+  padding-left: 1.6rem;
+  margin: 0 auto;
+}
+
+.ee-header {
+  padding-top: 1.1111111111em;
+  padding-bottom: 1.1111111111em;
+  background-color: #fff;
+}
+
+.ee-main {
+  min-height: calc(100vh - 7.8888888889em);
+}
+
+.ee-footer {
+  text-align: center;
+  background-color: #2a323d;
+  padding-top: 1.25em;
+  padding-bottom: 1.25em;
+  color: rgba(255, 255, 255, 0.52);
+  font-weight: 300;
+  font-size: 0.8888888889em;
+}
+.ee-footer a {
+  color: #fff;
+}
+.ee-footer a:hover {
+  text-decoration: underline;
+}
+
+/* Pages */
+.error404 .ee-main {
+  background-image: linear-gradient(270deg, #ed6696 0%, #3123ae 100%);
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.error404 .page-header {
+  font-size: calc(30px + (60 - 30) * ((100vw - 300px) / (1910 - 300)));
+  font-weight: 700;
+}
+@media (min-width: em(1170, 16)) {
+  .error404 .page-header {
+    font-size: 6rem;
+  }
+}
+
+/*# sourceMappingURL=main.css.map*/
